# school

./: .gitignore  README.md  gradernotes  index.md  makefile  p2.c
Data2/: input1  input11  input7
One/: getword.c  p1
Two/: getword.c  gradernotes  p2.c  p2.h
Zero/: makefile
archive/cs310/: ha1.py  ha6.py
archive/cs530/assignment-2/: README.txt  pyproject.toml  rdParser.py
archive/security/: windows_cmd.md
cs310/: a.out  cs310.md  ha2.py  ha3.py  ha4.py  ha5.py  pyproject.toml  timing.cpp
cs320/: cs320.md  hw4.rkt
cs320/p1/: p1b.c
cs320/p2/: llist.h  makefile
cs320/p3/: p3.py
cs320/p5/: iadrv.cpp  intArray.cpp  intArray.h  makefile
cs460/: P1_getting_started.ipynb  P2_divide_and_conquer.ipynb  P3_heapsort.ipynb  P3_linear_time_sort.ipynb  P3_quicksort.ipynb  P4_longest_common_subsequence.ipynb  P4_matrix_chain_multiplication.ipynb  P4_rod_cutting.ipynb  P5_huffman_codes.ipynb  pyproject.toml
cs460/p7/: P7_MST.ipynb  P7_shortest_paths.ipynb
cs480/Four/: blah.c  getword.c  p2.c  p2.c.bak  temp.c
cs480/Three/: p3helper.c
cs480/Two/: p2.c
cs480/Zero/: p0.c  run.sh
cs549/: .gitignore  a1.ipynb  pyproject.toml
cs549/a10/: a10_embedding.ipynb
cs549/a11/: a11_transformer1.ipynb  a11_transformer2.ipynb
cs549/a2/: a2_linear.ipynb
cs549/a3/: a3_logistic.ipynb
cs549/a4/: a4_pca.ipynb
cs549/a5/: a5_kmeans.ipynb
cs549/a6/: a6_nn.ipynb
cs549/a7/: a7_optim_dnn.ipynb
cs549/a8/: a8_cnn1.ipynb  a8_cnn2.ipynb  a8_cnn3.ipynb
cs549/a9/: a9_rnn1.ipynb
math245/: math245.md
math254/: math254.md
school/cs370/: cs370.md
security/: wireshark.md  x86.md
(+20 files in other folders)
