[tool.poetry]
name = "cs310"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
