[tool.poetry]
name = "cs460"
version = "0.1.0"
description = ""
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
jupyter = "^1.0.0"
notebook = "^6.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
