[tool.poetry]
name = "cs549"
version = "0.1.0"
description = ""
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
scikit-image = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
