[tool.poetry]
name = "assignment-2"
version = "0.1.0"
description = ""
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^24.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
